# banfinder

./: LICENSE  README.md  pyproject.toml  requirements.txt
r6bans/: __init__.py  __main__.py  cli.py  extractor.py  operators.py
r6bans/data/: operators.json
