[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "r6bans"
version = "1.0.0"
description = "Extract Rainbow Six Siege operator bans from .rec replay files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "banfinder contributors" }]
keywords = ["rainbow-six", "siege", "r6", "rec", "replay", "bans", "esports"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = ["zstandard>=0.21"]

[project.urls]
Homepage = "https://github.com/kyedevelopment/banfinder"
Issues = "https://github.com/kyedevelopment/banfinder/issues"

[project.scripts]
r6-bans = "r6bans.cli:main"

[tool.setuptools]
packages = ["r6bans"]

[tool.setuptools.package-data]
r6bans = ["data/operators.json"]
